--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body a, p, li{
     padding:0.8rem 0.8rem;
     text-decoration: none;
     font-size: 18px;
+    color: black;
     display: block;
     border-bottom: 1px solid grey;
   }
